Integrate susfs_su for root hiding
This commit integrates the `susfs_su` feature into the main build process. This feature, cherry-picked from the `susfs` project, hardens the final kernel against detection by mitigating time side-channel attacks that target kprobe latency.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sm7325"]
 	path = sm7325
 	url = https://github.com/JingMatrix/kernel_samsung_ascendia_sm7325.git
+[submodule "susfs4ksu"]
+	path = susfs4ksu
+	url = https://gitlab.com/simonpunk/susfs4ksu
